search box overlap fixed

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -194,7 +194,7 @@
 				position: absolute;
 				display: flex;
 				flex-direction: row;
-				top: 33px;
+				top: 38px;
 				right: 0;
 				padding: 0.5rem 0 0.5rem 0.5rem;
 				background-color: #e9e9e9;
